[gd_scene format=3 uid="uid://b4sp8rsrbx4q1"]

[ext_resource type="Script" uid="uid://bfnxw2cebuwtc" path="res://die_screen.gd" id="1_dbgas"]

[sub_resource type="CanvasTexture" id="CanvasTexture_qt6in"]

[node name="DieScreen" type="Node2D" unique_id=1306042573]
script = ExtResource("1_dbgas")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=969470591]

[node name="BG" type="TextureRect" parent="CanvasLayer" unique_id=1980075617]
modulate = Color(0.039215688, 0.039215688, 0.039215688, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource("CanvasTexture_qt6in")

[node name="GameOverText" type="RichTextLabel" parent="CanvasLayer" unique_id=974621989]
anchors_preset = -1
anchor_right = 0.99600005
anchor_bottom = 0.99300003
offset_left = 512.0
offset_top = 320.0
offset_right = -504.32007
offset_bottom = -560.44006
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/default_color = Color(0.7834323, 3.706068e-06, 6.738305e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5176471)
theme_override_constants/shadow_outline_size = 5
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 96
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TryAgainButton" type="Button" parent="CanvasLayer" unique_id=1853959233]
offset_left = 1024.0
offset_top = 704.0
offset_right = 1216.0
offset_bottom = 800.0
focus_mode = 0
theme_override_colors/font_pressed_color = Color(0.78039217, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.78431374, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="CanvasLayer" unique_id=752042580]
offset_left = 704.0
offset_top = 704.0
offset_right = 896.0
offset_bottom = 800.0
focus_mode = 0
theme_override_colors/font_pressed_color = Color(0.78039217, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.78431374, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Main Menu"

[connection signal="pressed" from="CanvasLayer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
